# tsn

./: .clippy.toml  .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Cargo.toml (dépendances audit)  Cargo.toml.bak  Cargo.toml.patch  DEPLOY.md  DEVLOG.md  Dockerfile  Dockerfile.alpine  LICENSE  Makefile  Makefile.devops  README-DOCKER.md  README-Docker.md  README-docker.md  README.md  SECURITY.md  `Cargo.toml`  `Cargo.toml` (section concernée)  clippy.toml  deny.toml  docker-bake.hcl  docker-compose.monitoring.yml  docker-compose.testnet.yml  docker-compose.yml  explorer.Dockerfile  fly.toml  grafana-dashboard.json  prometheus.yml  rust-toolchain.toml  rustfmt.toml  terminal  tsn_alerts.yml  wallet-local.json
.github/: CICD.md  dependabot.yml
`benches/: poseidon2.rs`
`fuzz/: crypto_fuzzer.rs`
`tests/: crypto_properties_test.rs`  crypto_property_tests.rs`  crypto_regression_test.rs`  crypto_timing_tests.rs`  regression_tests.rs`  side_channel_tests.rs`
agents/: agent_recovery.py  nexus.py  orchestrator.py
benches/: Cargo.toml  Dockerfile.bench  README.md  bench_config.toml  consensus_bench.rs  halo2_plonky2_comparison.rs  latency_bench.rs  memory_bench.rs  miner_cycle.rs  mining_race.rs  mining_scaling.rs  parallel_bench.rs  slh_dsa_bench.rs  throughput_bench.rs  timing_bench.rs  workload_bench.rs
brand/: BLOCKCHAIN_USER.md  animation-guidelines.md  animation-philosophy.md  animations-action-plan-herald.md  animations-guide-framer-motion.md  animations-guide.md  animations-implementation-guide.md  animations-ui-guide.md  animations-ui.md  blockchain-user-guide-complete-herald-backup.md  blockchain_user_guide.md  communication-strategy.md  design-system-v2.md  dev-team-announcement.md  dev-team-brand-brief.md  dns-setup.md  framer-motion-action-plan.md  framer-motion-implementation.md  launch-announcement-consolidated.md  launch-announcement-dev-team-final.md  launch-announcement-dev-team-official.md  launch-announcement-discord.md  launch-announcement-long.md  launch-announcement-team-fr.md  launch-announcement-twitter.md  launch-announcement.md  nouvelle-palette-quantum.css  solution-whitepaper-web.md  team-launch-official.md  twitter-thread-ui-dynamics.md  twitter-thread.md  ui-2-0-community-guide.md  ui-2-2-quantum-palette-announcement-mars2026.md  ui-2-3-dynamic-palette-release-mars2026.md  ui-animation-guidelines.md  ui-animations-action-plan.md  ui-animations-guide.md  ui-animations-implementation.md  ui-animations-spec.md  ui-animations-specs.md  (+51 more)
circuits/: README.md  output.circom  package-lock.json  package.json  spend.circom
config/: docker.toml  node1.toml  node2.toml
crypto-pq/: Cargo.toml
crypto-pq/src/: keygen.rs  lib.rs  sign.rs
dev_cli/: mod.rs
devops/: Dockerfile  deploy_nodes.sh
docker/: Dockerfile  Dockerfile.alpine  config.toml  default-config.toml  entrypoint.sh  nginx.conf  security-headers.conf  testnet.yml  tsn.conf
docs/: BLOCKCHAIN_USER.md  DEPLOYMENT_RINGS.md  KNOWN_FAILURES.md  MAINNET_PLAYBOOK.md  POSTMORTEMS.md  RELEASE_CHECKLIST.md  RELEASE_DECISIONS.md  TSN-001-slh-dsa-migration.md  TSN-Whitepaper-v0.1.md  TSN_v0.1_Whitepaper.md  TSN_v01_whitepaper.md  api-rpc.md  crypto-security-guide.md  landing-page-spec.md  security.md  tsn-v0.1-whitepaper.md  tsn-whitepaper-v0.1.md  tsn_v0.1_whitepaper.md  tsn_whitepaper_v0.1.md  user-guide.md  whitepaper-technique-tsn-v0-1.md  whitepaper-technique-tsn-v0.1.md  whitepaper-tsn-v0.1.md  whitepaper-v0.1.md  whitepaper.md  whitepaper_tsn_v0.1.md  whitepaper_tsn_v0_1.md  whitepaper_v0.1.md
fuzz/: Cargo.toml  README.md  commitment_fuzzer.rs  crypto_fuzz.rs  faucet_fuzzer.rs  fuzz_crypto_parser.rs  halo2_proof_fuzzer.rs  network_message_fuzzer.rs  panic_fuzzer.rs  proof_fuzzer.rs  run_panic_hunters.sh  signature_fuzzer.rs  transaction_fuzzer.rs
fuzz/fuzz_addr_parser/: Cargo.toml
fuzz/fuzz_addr_parser/fuzz_targets/: fuzz_target_1.rs
fuzz/fuzz_poseidon_input/: Cargo.toml
fuzz/fuzz_poseidon_input/fuzz_targets/: fuzz_target_1.rs
fuzz/fuzz_targets/: address_deser.rs  address_from_str.rs  block_deserialize_comprehensive.rs  block_parser.rs  circuit_pq_fuzzer.rs  commitment_deserialize_fuzz.rs  commitment_fuzz.rs  commitment_fuzzer.rs  commitment_hash.rs  commitment_pq_fuzzer.rs  consensus_validation_pipeline.rs  critical_unwrap_fuzzer.rs  crypto_address_parse.rs  crypto_address_parser.rs  crypto_commitment.rs  crypto_commitment_fuzz.rs  crypto_commitment_parser.rs  crypto_deserialize.rs  crypto_deserialize_key.rs  crypto_deserialize_sig.rs  crypto_keys_fuzz.rs  crypto_merkle.rs  crypto_merkle_proof.rs  crypto_note.rs  crypto_note_parse.rs  crypto_note_parsing.rs  crypto_nullifier.rs  crypto_panic_fuzzer.rs  crypto_parser.rs  crypto_parsers.rs  crypto_poseidon.rs  crypto_pq_slh_dsa_fuzzer.rs  crypto_proof.rs  crypto_proof_parser.rs  crypto_pubkey_deserialize.rs  crypto_signature.rs  crypto_signature_deserialize.rs  crypto_signature_fuzz.rs  crypto_signature_parser.rs  crypto_signature_verify.rs  (+35 more)
fuzz/fuzz_targets/crypto/: param_validation.rs
keys/: release_signing.key  release_signing.pub
local-testnet/: config-1.toml  config-2.toml
marketing/: animations-announcement.md  discord-milestone-animations.md  discord-ui-milestone.md  launch-announcement.md  social-media-ui-refonte.md  ui-redesign-announcement.md  ui-refonte-annonce.md  ui-refonte-milestone-implementation.md  ui_launch_content.md  wallet-ui-announcement.md
plonky2-wasm/: Cargo.toml  build.sh  test-node.mjs
plonky2-wasm/src/: lib.rs
plonky3-wasm/: Cargo.toml
plonky3-wasm/src/: lib.rs
scripts/: audit_unwraps.sh  backup-nodes.sh  bench.sh  build-docker-image.sh  build-website.sh  build.sh  check-image-size.sh  ci-build.sh  ci-size-report.sh  ci_docker_size.sh  consensus_alerts.yml  deploy-node.sh  deploy.sh  deploy_node.sh  docker-build.sh  docker-check-size.sh  docker-clean.sh  docker-compose-test.sh  docker-dev.sh  docker-entrypoint.sh  docker-release.sh  docker-run-local.sh  docker-run.sh  docker-size-check.sh  docker-size.sh  docker-smoke-test.sh  docker-stats.sh  docker-testnet.sh  (+37 more)
(+738 files in other folders)
