[package]
name = "tsn"
version = "2.3.4"
edition = "2021"
description = "TSN (Trust Stack Network) - A privacy-preserving post-quantum cryptocurrency"
license = "MIT"

[dependencies]
# Post-quantum cryptography (NIST FIPS 204 ML-DSA-65)
fips204 = "0.4"

# Hashing
sha2 = { version = "0.10", features = ["compress"] }
blake2 = "0.10"
light-poseidon = "0.2"
pbkdf2 = "0.12"
hmac = "0.12"

# zk-SNARKs (Groth16 on BN254 for compatibility with circomlibjs/snarkjs) - V1 LEGACY
ark-groth16 = "0.4"
ark-bls12-381 = "0.4"
ark-bn254 = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-std = "0.4"
ark-serialize = { version = "0.4", features = ["derive"] }
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-snark = "0.4"
ark-crypto-primitives = { version = "0.4", features = ["commitment", "merkle_tree", "prf", "sponge", "r1cs"] }

# Post-quantum ZK proofs (Plonky2 STARKs) - V2 QUANTUM-SAFE
# Plonky2 provides FRI-based proofs using only hash assumptions (quantum-resistant)
# Supports browser WASM compilation for client-side proving
plonky2 = "1.0"
plonky2_field = "1.0"

# Plonky3 (p3-*) — V3 AIR-based ZK proofs + Poseidon2 PoW hash
p3-poseidon2 = "0.4"
p3-goldilocks = "0.4"
p3-field = "0.4"
p3-symmetric = "0.4"
p3-uni-stark = "0.4"
p3-air = "0.4"
p3-challenger = "0.4"
p3-commit = "0.4"
p3-fri = "0.4"
p3-merkle-tree = "0.4"
p3-matrix = "0.4"

# Encryption (for note encryption)
chacha20poly1305 = "0.10"
aes = "0.8"
aes-gcm = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
toml = "0.8"

# Networking (HTTP API — kept for wallet, explorer, external tools)
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs", "limit"] }
tower_governor = "0.4"
tower = "0.5"
reqwest = { version = "0.12", features = ["json"] }

# P2P Networking (libp2p — block propagation, peer discovery, NAT traversal)
libp2p = { version = "0.54", features = [
    "tokio",
    "tcp",
    "quic",
    "noise",
    "yamux",
    "gossipsub",
    "kad",
    "identify",
    "autonat",
    "relay",
    "dcutr",
    "dns",
    "macros",
    "serde",
] }

# Database
sled = "0.34"
rusqlite = { version = "0.31", features = ["bundled"] }

# Compression (for snapshot download + auto-update extraction)
flate2 = "1"
tar = "0.4"

# Monitoring
prometheus = "0.13"

# Utilities
hex = "0.4"
lru = "0.12"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
anyhow = "1"
lazy_static = "1.4"
once_cell = "1"
bytes = "1"
async-trait = "0.1"
arbitrary = { version = "1.3", features = ["derive"] }
libc = "0.2"

# Ed25519 release signature verification
ed25519-dalek = { version = "2", features = ["pkcs8"] }

# Memory and security utilities
crossbeam-queue = "0.3"
zeroize = { version = "1.8", features = ["derive"] }

# TUI
ratatui = "0.27"
crossterm = "0.28"

[[bin]]
name = "tsn-miner-monitor"
path = "src/bin/miner_monitor.rs"

[[bin]]
name = "fuzz_runner"
path = "fuzz/fuzz_targets/runner.rs"

[[bench]]
name = "timing_bench"
harness = false

[[bench]]
name = "mining_scaling"
harness = false

[[bench]]
name = "mining_race"
harness = false

[profile.release]
debug = true
lto = true
codegen-units = 1

[profile.fuzz]
inherits = "dev"
opt-level = 3

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
# Feature pour activer les modules de démonstration vulnérables (TESTS UNIQUEMENT)
# ⚠️ Ces modules ne doivent JAMAIS être utilisés en production
# Utilisation : cargo build --features vulnerable-demo
vulnerable-demo = []
# Feature pour utiliser pqcrypto-sphincsplus (implémentation C optimisée)
pqcrypto-sphincsplus = []
# Feature pour désactiver certains tests (timing, sécurité, etc.)
# Utilisation : cargo test --features disabled_test
disabled_test = []
