[package]
name = "crypto-pq"
version = "0.1.0"
edition = "2021"

[dependencies]
slh-dsa = { version = "0.2.0-rc.4", default-features = false, features = ["alloc", "zeroize"] }
# other dependencies...

# If std is required by other crates, keep it for those.
# rand = { version = "0.8", features = ["std"] }